// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ApprovalListScreen Tests rendering Get Approval Api responses Renders Approval Api error message 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
      "paddingHorizontal": 15,
      "paddingVertical": 15,
    }
  }
>
  <mockConstructor
    color="#e57373"
    name="alert"
    size={40}
  />
  <Text
    style={
      Object {
        "fontSize": 16,
        "textAlign": "center",
      }
    }
  >
    [missing "en.APPROVAL.APPROVAL_API_ERROR" translation]
  </Text>
  <ForwardRef
    onPress={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#e57373",
        "borderRadius": 4,
        "height": 40,
        "justifyContent": "center",
        "marginVertical": 10,
        "width": "95%",
      }
    }
  >
    <Text>
      [missing "en.GENERICS.RETRY" translation]
    </Text>
  </ForwardRef>
</View>
`;

exports[`ApprovalListScreen Tests rendering Get Approval Api responses Renders loading indicator when waiting for Approval Api response 1`] = `
<ActivityIndicator
  animating={true}
  color="#0071e9"
  hidesWhenStopped={true}
  size="large"
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
/>
`;

exports[`ApprovalListScreen Tests rendering Get Approval Api responses Renders pop-up on update approval api response status 207 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <RenderPopUp
    dispatch={[MockFunction]}
    updateApprovalApi={
      Object {
        "error": null,
        "isWaiting": false,
        "result": Object {
          "data": Object {
            "data": Array [
              Object {
                "id": 4785,
                "itemNbr": 125,
                "message": "failure",
                "statusCode": 500,
              },
            ],
            "metadata": Object {
              "failure": 1,
              "skipped": 0,
              "success": 0,
              "total": 1,
            },
            "skippedItems": Array [],
          },
          "status": 207,
        },
        "value": null,
      }
    }
  />
  <FlatList
    ListEmptyComponent={
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
            "paddingVertical": 28,
          }
        }
      >
        <mockConstructor
          color="#5FA7F2"
          name="information"
          size={40}
        />
        <Text>
          [missing "en.APPROVAL.LIST_NOT_FOUND" translation]
        </Text>
      </View>
    }
    data={Array []}
    disableVirtualization={false}
    extraData={Array []}
    horizontal={false}
    initialNumToRender={10}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    numColumns={1}
    onEndReachedThreshold={2}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={50}
    style={
      Object {
        "flex": 1,
      }
    }
    updateCellsBatchingPeriod={50}
    windowSize={21}
  />
</View>
`;

exports[`ApprovalListScreen Tests rendering the approval list RenderApprovalItem renders an approval item 1`] = `
<ApprovalCard
  daysLeft={3}
  dispatch={[MockFunction]}
  dollarChange={150.5}
  isChecked={false}
  itemName="Nature Valley Crunchy Cereal Bars "
  itemNbr={123}
  newQuantity={20}
  oldQuantity={5}
  userId="Associate Employee"
/>
`;

exports[`ApprovalListScreen Tests rendering the approval list RenderApprovalItem renders the category header 1`] = `
<ApprovalCategorySeparator
  categoryName="SNACKS"
  categoryNbr={1}
  dispatch={[MockFunction]}
  isChecked={false}
/>
`;

exports[`ApprovalListScreen Tests rendering the approval list Renders Approve/Reject buttons for selected approval items 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <FlatList
    ListEmptyComponent={
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
            "paddingVertical": 28,
          }
        }
      >
        <mockConstructor
          color="#5FA7F2"
          name="information"
          size={40}
        />
        <Text>
          [missing "en.APPROVAL.LIST_NOT_FOUND" translation]
        </Text>
      </View>
    }
    data={
      Array [
        Object {
          "categoryDescription": "SNACKS",
          "categoryHeader": true,
          "categoryNbr": 1,
          "isChecked": false,
        },
        Object {
          "approvalRequestSource": "itemdetails",
          "approvalStatus": "Pending",
          "categoryDescription": "SNACKS",
          "categoryNbr": 1,
          "daysLeft": 3,
          "dollarChange": 150.5,
          "imageUrl": undefined,
          "initiatedTimestamp": "2021-03-27T00:00:00.000Z",
          "initiatedUserId": "Associate Employee",
          "isChecked": false,
          "itemName": "Nature Valley Crunchy Cereal Bars ",
          "itemNbr": 123,
          "newQuantity": 20,
          "oldQuantity": 5,
          "subCategoryDescription": "",
          "subCategoryNbr": 1,
          "upcNbr": 40000000123,
        },
        Object {
          "categoryDescription": "FRUITS/VEGETABLES",
          "categoryHeader": true,
          "categoryNbr": 2,
          "isChecked": false,
        },
        Object {
          "approvalRequestSource": "itemdetails",
          "approvalStatus": "Pending",
          "categoryDescription": "FRUITS/VEGETABLES",
          "categoryNbr": 2,
          "daysLeft": 2,
          "dollarChange": 50,
          "imageUrl": undefined,
          "initiatedTimestamp": "2021-03-28T00:00:00.000Z",
          "initiatedUserId": "Associate Worker",
          "isChecked": false,
          "itemName": "Red Apples",
          "itemNbr": 456,
          "newQuantity": 10,
          "oldQuantity": 30,
          "subCategoryDescription": "",
          "subCategoryNbr": 1,
          "upcNbr": 40000000456,
        },
        Object {
          "approvalRequestSource": "itemdetails",
          "approvalStatus": "Pending",
          "categoryDescription": "FRUITS/VEGETABLES",
          "categoryNbr": 2,
          "daysLeft": 2,
          "dollarChange": 40,
          "imageUrl": undefined,
          "initiatedTimestamp": "2021-03-28T00:00:00.000Z",
          "initiatedUserId": "Associate Worker",
          "isChecked": false,
          "itemName": "Cabbage",
          "itemNbr": 457,
          "newQuantity": 15,
          "oldQuantity": 30,
          "subCategoryDescription": "",
          "subCategoryNbr": 1,
          "upcNbr": 40000000457,
        },
        Object {
          "approvalRequestSource": "itemdetails",
          "approvalStatus": "Pending",
          "categoryDescription": "FRUITS/VEGETABLES",
          "categoryNbr": 2,
          "daysLeft": 2,
          "dollarChange": 80,
          "imageUrl": undefined,
          "initiatedTimestamp": "2021-03-28T00:00:00.000Z",
          "initiatedUserId": "Associate Worker",
          "isChecked": false,
          "itemName": "Strawberries",
          "itemNbr": 458,
          "newQuantity": 40,
          "oldQuantity": 20,
          "subCategoryDescription": "",
          "subCategoryNbr": 1,
          "upcNbr": 40000000458,
        },
      ]
    }
    disableVirtualization={false}
    extraData={
      Array [
        Object {
          "categoryDescription": "SNACKS",
          "categoryHeader": true,
          "categoryNbr": 1,
          "isChecked": false,
        },
        Object {
          "approvalRequestSource": "itemdetails",
          "approvalStatus": "Pending",
          "categoryDescription": "SNACKS",
          "categoryNbr": 1,
          "daysLeft": 3,
          "dollarChange": 150.5,
          "imageUrl": undefined,
          "initiatedTimestamp": "2021-03-27T00:00:00.000Z",
          "initiatedUserId": "Associate Employee",
          "isChecked": false,
          "itemName": "Nature Valley Crunchy Cereal Bars ",
          "itemNbr": 123,
          "newQuantity": 20,
          "oldQuantity": 5,
          "subCategoryDescription": "",
          "subCategoryNbr": 1,
          "upcNbr": 40000000123,
        },
        Object {
          "categoryDescription": "FRUITS/VEGETABLES",
          "categoryHeader": true,
          "categoryNbr": 2,
          "isChecked": false,
        },
        Object {
          "approvalRequestSource": "itemdetails",
          "approvalStatus": "Pending",
          "categoryDescription": "FRUITS/VEGETABLES",
          "categoryNbr": 2,
          "daysLeft": 2,
          "dollarChange": 50,
          "imageUrl": undefined,
          "initiatedTimestamp": "2021-03-28T00:00:00.000Z",
          "initiatedUserId": "Associate Worker",
          "isChecked": false,
          "itemName": "Red Apples",
          "itemNbr": 456,
          "newQuantity": 10,
          "oldQuantity": 30,
          "subCategoryDescription": "",
          "subCategoryNbr": 1,
          "upcNbr": 40000000456,
        },
        Object {
          "approvalRequestSource": "itemdetails",
          "approvalStatus": "Pending",
          "categoryDescription": "FRUITS/VEGETABLES",
          "categoryNbr": 2,
          "daysLeft": 2,
          "dollarChange": 40,
          "imageUrl": undefined,
          "initiatedTimestamp": "2021-03-28T00:00:00.000Z",
          "initiatedUserId": "Associate Worker",
          "isChecked": false,
          "itemName": "Cabbage",
          "itemNbr": 457,
          "newQuantity": 15,
          "oldQuantity": 30,
          "subCategoryDescription": "",
          "subCategoryNbr": 1,
          "upcNbr": 40000000457,
        },
        Object {
          "approvalRequestSource": "itemdetails",
          "approvalStatus": "Pending",
          "categoryDescription": "FRUITS/VEGETABLES",
          "categoryNbr": 2,
          "daysLeft": 2,
          "dollarChange": 80,
          "imageUrl": undefined,
          "initiatedTimestamp": "2021-03-28T00:00:00.000Z",
          "initiatedUserId": "Associate Worker",
          "isChecked": false,
          "itemName": "Strawberries",
          "itemNbr": 458,
          "newQuantity": 40,
          "oldQuantity": 20,
          "subCategoryDescription": "",
          "subCategoryNbr": 1,
          "upcNbr": 40000000458,
        },
      ]
    }
    horizontal={false}
    initialNumToRender={10}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    numColumns={1}
    onEndReachedThreshold={2}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={50}
    stickyHeaderIndices={
      Array [
        0,
        2,
      ]
    }
    style={
      Object {
        "flex": 1,
      }
    }
    updateCellsBatchingPeriod={50}
    windowSize={21}
  />
  <ButtonBottomTab
    leftTitle="[missing \\"en.APPROVAL.REJECT\\" translation]"
    onLeftPress={[Function]}
    onRightPress={[Function]}
    rightTitle="[missing \\"en.APPROVAL.APPROVE\\" translation]"
  />
</View>
`;

exports[`ApprovalListScreen Tests rendering the approval list Renders Empty Approval list on response status 204 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <FlatList
    ListEmptyComponent={
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
            "paddingVertical": 28,
          }
        }
      >
        <mockConstructor
          color="#5FA7F2"
          name="information"
          size={40}
        />
        <Text>
          [missing "en.APPROVAL.LIST_NOT_FOUND" translation]
        </Text>
      </View>
    }
    data={Array []}
    disableVirtualization={false}
    extraData={Array []}
    horizontal={false}
    initialNumToRender={10}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    numColumns={1}
    onEndReachedThreshold={2}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={50}
    style={
      Object {
        "flex": 1,
      }
    }
    updateCellsBatchingPeriod={50}
    windowSize={21}
  />
</View>
`;

exports[`ApprovalListScreen Tests rendering the approval list Renders a list of Approval Items 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <FlatList
    ListEmptyComponent={
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
            "paddingVertical": 28,
          }
        }
      >
        <mockConstructor
          color="#5FA7F2"
          name="information"
          size={40}
        />
        <Text>
          [missing "en.APPROVAL.LIST_NOT_FOUND" translation]
        </Text>
      </View>
    }
    data={
      Array [
        Object {
          "categoryDescription": "SNACKS",
          "categoryHeader": true,
          "categoryNbr": 1,
          "isChecked": false,
        },
        Object {
          "approvalRequestSource": "itemdetails",
          "approvalStatus": "Pending",
          "categoryDescription": "SNACKS",
          "categoryNbr": 1,
          "daysLeft": 3,
          "dollarChange": 150.5,
          "imageUrl": undefined,
          "initiatedTimestamp": "2021-03-27T00:00:00.000Z",
          "initiatedUserId": "Associate Employee",
          "isChecked": false,
          "itemName": "Nature Valley Crunchy Cereal Bars ",
          "itemNbr": 123,
          "newQuantity": 20,
          "oldQuantity": 5,
          "subCategoryDescription": "",
          "subCategoryNbr": 1,
          "upcNbr": 40000000123,
        },
        Object {
          "categoryDescription": "FRUITS/VEGETABLES",
          "categoryHeader": true,
          "categoryNbr": 2,
          "isChecked": false,
        },
        Object {
          "approvalRequestSource": "itemdetails",
          "approvalStatus": "Pending",
          "categoryDescription": "FRUITS/VEGETABLES",
          "categoryNbr": 2,
          "daysLeft": 2,
          "dollarChange": 50,
          "imageUrl": undefined,
          "initiatedTimestamp": "2021-03-28T00:00:00.000Z",
          "initiatedUserId": "Associate Worker",
          "isChecked": false,
          "itemName": "Red Apples",
          "itemNbr": 456,
          "newQuantity": 10,
          "oldQuantity": 30,
          "subCategoryDescription": "",
          "subCategoryNbr": 1,
          "upcNbr": 40000000456,
        },
        Object {
          "approvalRequestSource": "itemdetails",
          "approvalStatus": "Pending",
          "categoryDescription": "FRUITS/VEGETABLES",
          "categoryNbr": 2,
          "daysLeft": 2,
          "dollarChange": 40,
          "imageUrl": undefined,
          "initiatedTimestamp": "2021-03-28T00:00:00.000Z",
          "initiatedUserId": "Associate Worker",
          "isChecked": false,
          "itemName": "Cabbage",
          "itemNbr": 457,
          "newQuantity": 15,
          "oldQuantity": 30,
          "subCategoryDescription": "",
          "subCategoryNbr": 1,
          "upcNbr": 40000000457,
        },
        Object {
          "approvalRequestSource": "itemdetails",
          "approvalStatus": "Pending",
          "categoryDescription": "FRUITS/VEGETABLES",
          "categoryNbr": 2,
          "daysLeft": 2,
          "dollarChange": 80,
          "imageUrl": undefined,
          "initiatedTimestamp": "2021-03-28T00:00:00.000Z",
          "initiatedUserId": "Associate Worker",
          "isChecked": false,
          "itemName": "Strawberries",
          "itemNbr": 458,
          "newQuantity": 40,
          "oldQuantity": 20,
          "subCategoryDescription": "",
          "subCategoryNbr": 1,
          "upcNbr": 40000000458,
        },
      ]
    }
    disableVirtualization={false}
    extraData={
      Array [
        Object {
          "categoryDescription": "SNACKS",
          "categoryHeader": true,
          "categoryNbr": 1,
          "isChecked": false,
        },
        Object {
          "approvalRequestSource": "itemdetails",
          "approvalStatus": "Pending",
          "categoryDescription": "SNACKS",
          "categoryNbr": 1,
          "daysLeft": 3,
          "dollarChange": 150.5,
          "imageUrl": undefined,
          "initiatedTimestamp": "2021-03-27T00:00:00.000Z",
          "initiatedUserId": "Associate Employee",
          "isChecked": false,
          "itemName": "Nature Valley Crunchy Cereal Bars ",
          "itemNbr": 123,
          "newQuantity": 20,
          "oldQuantity": 5,
          "subCategoryDescription": "",
          "subCategoryNbr": 1,
          "upcNbr": 40000000123,
        },
        Object {
          "categoryDescription": "FRUITS/VEGETABLES",
          "categoryHeader": true,
          "categoryNbr": 2,
          "isChecked": false,
        },
        Object {
          "approvalRequestSource": "itemdetails",
          "approvalStatus": "Pending",
          "categoryDescription": "FRUITS/VEGETABLES",
          "categoryNbr": 2,
          "daysLeft": 2,
          "dollarChange": 50,
          "imageUrl": undefined,
          "initiatedTimestamp": "2021-03-28T00:00:00.000Z",
          "initiatedUserId": "Associate Worker",
          "isChecked": false,
          "itemName": "Red Apples",
          "itemNbr": 456,
          "newQuantity": 10,
          "oldQuantity": 30,
          "subCategoryDescription": "",
          "subCategoryNbr": 1,
          "upcNbr": 40000000456,
        },
        Object {
          "approvalRequestSource": "itemdetails",
          "approvalStatus": "Pending",
          "categoryDescription": "FRUITS/VEGETABLES",
          "categoryNbr": 2,
          "daysLeft": 2,
          "dollarChange": 40,
          "imageUrl": undefined,
          "initiatedTimestamp": "2021-03-28T00:00:00.000Z",
          "initiatedUserId": "Associate Worker",
          "isChecked": false,
          "itemName": "Cabbage",
          "itemNbr": 457,
          "newQuantity": 15,
          "oldQuantity": 30,
          "subCategoryDescription": "",
          "subCategoryNbr": 1,
          "upcNbr": 40000000457,
        },
        Object {
          "approvalRequestSource": "itemdetails",
          "approvalStatus": "Pending",
          "categoryDescription": "FRUITS/VEGETABLES",
          "categoryNbr": 2,
          "daysLeft": 2,
          "dollarChange": 80,
          "imageUrl": undefined,
          "initiatedTimestamp": "2021-03-28T00:00:00.000Z",
          "initiatedUserId": "Associate Worker",
          "isChecked": false,
          "itemName": "Strawberries",
          "itemNbr": 458,
          "newQuantity": 40,
          "oldQuantity": 20,
          "subCategoryDescription": "",
          "subCategoryNbr": 1,
          "upcNbr": 40000000458,
        },
      ]
    }
    horizontal={false}
    initialNumToRender={10}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    numColumns={1}
    onEndReachedThreshold={2}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={50}
    stickyHeaderIndices={
      Array [
        0,
        2,
      ]
    }
    style={
      Object {
        "flex": 1,
      }
    }
    updateCellsBatchingPeriod={50}
    windowSize={21}
  />
</View>
`;

exports[`ApprovalListScreen Tests rendering update approval api 207 responses Pop up Renders only failed item numbers 1`] = `
<ReactNativeModal
  animationIn="slideInUp"
  animationInTiming={300}
  animationOut="slideOutDown"
  animationOutTiming={300}
  avoidKeyboard={false}
  backdropColor="black"
  backdropOpacity={0.7}
  backdropTransitionInTiming={300}
  backdropTransitionOutTiming={300}
  coverScreen={true}
  customBackdrop={null}
  deviceHeight={null}
  deviceWidth={null}
  hasBackdrop={true}
  hideModalContentWhileAnimating={false}
  isVisible={true}
  onBackButtonPress={[Function]}
  onBackdropPress={[Function]}
  onModalHide={[Function]}
  onModalShow={[Function]}
  onModalWillHide={[Function]}
  onModalWillShow={[Function]}
  panResponderThreshold={4}
  propagateSwipe={false}
  scrollHorizontal={false}
  scrollOffset={0}
  scrollOffsetMax={0}
  scrollTo={null}
  supportedOrientations={
    Array [
      "portrait",
      "landscape",
    ]
  }
  swipeThreshold={100}
  useNativeDriver={false}
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#ffffffff",
          "borderRadius": 5,
          "justifyContent": "space-between",
          "paddingVertical": 15,
          "width": "80%",
        }
      }
    >
      <Text
        style={
          Object {
            "fontSize": 16,
            "textAlign": "center",
          }
        }
      >
        [missing "en.APPROVAL.FAILED_APPROVE" translation]
      </Text>
      <FlatList
        data={
          Array [
            Object {
              "id": 4785,
              "itemNbr": 125,
              "message": "failure",
              "statusCode": 500,
            },
          ]
        }
        disableVirtualization={false}
        horizontal={false}
        initialNumToRender={10}
        keyExtractor={[Function]}
        maxToRenderPerBatch={10}
        numColumns={1}
        onEndReachedThreshold={2}
        removeClippedSubviews={false}
        renderItem={[Function]}
        scrollEventThrottle={50}
        style={
          Object {
            "minHeight": 80,
            "paddingVertical": 20,
          }
        }
        updateCellsBatchingPeriod={50}
        windowSize={21}
      />
      <Button
        backgroundColor="#0071e9"
        disabled={false}
        height={45}
        onPress={[Function]}
        radius={5}
        style={
          Object {
            "width": "50%",
          }
        }
        title="[missing \\"en.APPROVAL.CONFIRM\\" translation]"
        titleColor="#ffffffff"
        titleFontSize={16}
        titleFontWeight="normal"
        type={1}
        width={-1}
      />
    </View>
  </View>
</ReactNativeModal>
`;

exports[`ApprovalListScreen Tests rendering update approval api 207 responses Pop up renders "##/## Failed Items" for more than 5 failed items  1`] = `
<ReactNativeModal
  animationIn="slideInUp"
  animationInTiming={300}
  animationOut="slideOutDown"
  animationOutTiming={300}
  avoidKeyboard={false}
  backdropColor="black"
  backdropOpacity={0.7}
  backdropTransitionInTiming={300}
  backdropTransitionOutTiming={300}
  coverScreen={true}
  customBackdrop={null}
  deviceHeight={null}
  deviceWidth={null}
  hasBackdrop={true}
  hideModalContentWhileAnimating={false}
  isVisible={true}
  onBackButtonPress={[Function]}
  onBackdropPress={[Function]}
  onModalHide={[Function]}
  onModalShow={[Function]}
  onModalWillHide={[Function]}
  onModalWillShow={[Function]}
  panResponderThreshold={4}
  propagateSwipe={false}
  scrollHorizontal={false}
  scrollOffset={0}
  scrollOffsetMax={0}
  scrollTo={null}
  supportedOrientations={
    Array [
      "portrait",
      "landscape",
    ]
  }
  swipeThreshold={100}
  useNativeDriver={false}
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#ffffffff",
          "borderRadius": 5,
          "justifyContent": "space-between",
          "paddingVertical": 15,
          "width": "80%",
        }
      }
    >
      <Text
        style={
          Object {
            "fontSize": 16,
            "textAlign": "center",
          }
        }
      >
        [missing "en.APPROVAL.FAILED_APPROVE" translation]
      </Text>
      <Text
        style={
          Object {
            "paddingVertical": 20,
          }
        }
      >
        6 / 6 [missing "en.APPROVAL.FAILED_ITEMS" translation]
      </Text>
      <Button
        backgroundColor="#0071e9"
        disabled={false}
        height={45}
        onPress={[Function]}
        radius={5}
        style={
          Object {
            "width": "50%",
          }
        }
        title="[missing \\"en.APPROVAL.CONFIRM\\" translation]"
        titleColor="#ffffffff"
        titleFontSize={16}
        titleFontWeight="normal"
        type={1}
        width={-1}
      />
    </View>
  </View>
</ReactNativeModal>
`;

exports[`ApprovalListScreen Tests rendering update approval api 207 responses Pop up renders only failed item numbers for mix of success and failed items  1`] = `
<ReactNativeModal
  animationIn="slideInUp"
  animationInTiming={300}
  animationOut="slideOutDown"
  animationOutTiming={300}
  avoidKeyboard={false}
  backdropColor="black"
  backdropOpacity={0.7}
  backdropTransitionInTiming={300}
  backdropTransitionOutTiming={300}
  coverScreen={true}
  customBackdrop={null}
  deviceHeight={null}
  deviceWidth={null}
  hasBackdrop={true}
  hideModalContentWhileAnimating={false}
  isVisible={true}
  onBackButtonPress={[Function]}
  onBackdropPress={[Function]}
  onModalHide={[Function]}
  onModalShow={[Function]}
  onModalWillHide={[Function]}
  onModalWillShow={[Function]}
  panResponderThreshold={4}
  propagateSwipe={false}
  scrollHorizontal={false}
  scrollOffset={0}
  scrollOffsetMax={0}
  scrollTo={null}
  supportedOrientations={
    Array [
      "portrait",
      "landscape",
    ]
  }
  swipeThreshold={100}
  useNativeDriver={false}
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#ffffffff",
          "borderRadius": 5,
          "justifyContent": "space-between",
          "paddingVertical": 15,
          "width": "80%",
        }
      }
    >
      <Text
        style={
          Object {
            "fontSize": 16,
            "textAlign": "center",
          }
        }
      >
        [missing "en.APPROVAL.FAILED_APPROVE" translation]
      </Text>
      <FlatList
        data={
          Array [
            Object {
              "id": 4785,
              "itemNbr": 125,
              "message": "failure",
              "statusCode": 500,
            },
          ]
        }
        disableVirtualization={false}
        horizontal={false}
        initialNumToRender={10}
        keyExtractor={[Function]}
        maxToRenderPerBatch={10}
        numColumns={1}
        onEndReachedThreshold={2}
        removeClippedSubviews={false}
        renderItem={[Function]}
        scrollEventThrottle={50}
        style={
          Object {
            "minHeight": 80,
            "paddingVertical": 20,
          }
        }
        updateCellsBatchingPeriod={50}
        windowSize={21}
      />
      <Button
        backgroundColor="#0071e9"
        disabled={false}
        height={45}
        onPress={[Function]}
        radius={5}
        style={
          Object {
            "width": "50%",
          }
        }
        title="[missing \\"en.APPROVAL.CONFIRM\\" translation]"
        titleColor="#ffffffff"
        titleFontSize={16}
        titleFontWeight="normal"
        type={1}
        width={-1}
      />
    </View>
  </View>
</ReactNativeModal>
`;
